--- a/helperfunc/sortfunc/Makefile
+++ b/helperfunc/sortfunc/Makefile
@@ -6,14 +6,14 @@
 #    By: sagemura <sagemura@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/10/02 00:17:25 by sagemura          #+#    #+#              #
-#    Updated: 2024/01/05 20:31:22 by sagemura         ###   ########.fr        #
+#    Updated: 2024/01/23 20:26:24 by sagemura         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = sortfunc.a
 SRCS =   helper_sort.c operation.c operation_2.c operation_3.c execute_sort.c\
 		 bigstacks_sort.c magic_sort_5.c magic_sort_3.c finish_bigstacks_sort.c\
-		 set_stacksb.c delete_memory.c allocate_memory.c find_stack_pos.c\
+		 set_stacksb.c delete_memory.c allocate_flag_memory.c allocate_array_memory.c find_stack_pos.c\
 
 
 OBJS = $(SRCS:.c=.o)
